<resources>
    <string name="app_name">GoForLunch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notif_notification_channel_name">Notification Channel Name</string>

    <string name="action_settings">Settings</string>

    <!-- GENERAL MESSAGES -->
    <string name="noInternet">Internet: NOT available</string>
    <string name="noInternetFeaturesNotWork">Internet not available. Some features might not work</string>
    <string name="storageNotGranted">Storage Access: NOT granted</string>
    <string name="storageGranted">Storage Access: GRANTED</string>
    <string name="notImplemented">Not implemented&#8230;</string>
    <string name="somethingWentWrong">Something went wrong&#8230; Please, try again</string>
    <string name="permissionPermissionNecessary">Permission necessary</string>
    <string name="permissionPermissionIsNecessary">Permission is necessary</string>
    <string name="getAccountsDenied">GET_ACCOUNTS Denied</string>
    <string name="loading_please_wait">Loading... please wait</string>

    <!-- COMMON -->
    <string name="commonToastEnterFirstName">Please, enter First name</string>
    <string name="commonToastEnterLastName">Please, enter Last name</string>
    <string name="commonToastEnterEmail">Please, enter email address</string>
    <string name="commonToastEnterPassword">Please, enter password</string>
    <string name="commonToastPasswordTooShort">The password is too short</string>
    <string name="commonYouNotPickedImage">You have not picked an image</string>

    <string name="commonFirstName">First Name</string>
    <string name="commonLastName">Last Name</string>
    <string name="commonEmail">Email</string>
    <string name="commonPassword">Password</string>
    <string name="commonGroup">Group</string>

    <string name="snackbarNoInternetText">There is no internet connection</string>
    <string name="snackbarNoInternetButton">HIDE</string>

    <!-- MAIN ACTIVITY -->
    <string name="mainBottomMapView">Map View</string>
    <string name="mainBottomListView">List View</string>
    <string name="mainBottomWorkmates">Workmates</string>
    <string name="mainDialogAreYouSureLogOut">Are you sure you want to log out?</string>
    <string name="mainDialogLoggingOut">Logging Out</string>
    <string name="mainDialogLoggingOutYes">YES, I am sure</string>
    <string name="mainDialogLoggingOutNo">NO</string>


    <!--
     These 2 methods save in sharedPreferences that the two alarms have been created
     (the notifications alarm has nothing to do with Settings Activity (the preferences fragment
     updates pref_key_notifications which is used to determine if the notification has to appear)
     -->
    <string name="key_alarmAddRestaurantIsOn" translatable="false">alarmAddRestaurantOn</string>
    <string name="key_alarmNotificationsAreOn" translatable="false">alarmNotificationsOn</string>

    <!-- FRAGMENTS -->
    <string name="autoCompleteSearchText">Search</string>
    <string name="toolbarImHungry">I\'m hungry</string>
    <string name="toolbarAvailableWorkmates">Available Workmates</string>

    <!-- FRAGMENTS: Coworkers -->
    <string name="avCowHasNotDecided">%1$s %2$s has not decided yet&#8230;</string>
    <string name="avCowHasDecided">%1$s %2$s is eating \"%3$s\" (%4$s)</string>
    <string name="noInfoAvailable">No information available</string>




    <!-- PREFERENCES FRAGMENT -->
    <string name="pref_summaryOff">Notifications are disabled</string>
    <string name="pref_summaryOn">Notifications are enabled</string>
    <string name="pref_title">Notifications</string>
    <string name="pref_key_notifications" translatable="false">alarmNotifications</string>


    <!-- INTENT RECYCLER VIEW -> USER_RESTAURANT_NAME IMAGE_LOAD_TYPE -->
    <string name="i_image_url" translatable="false">image_url</string>
    <string name="i_name" translatable="false">name</string>
    <string name="i_address" translatable="false">address</string>
    <string name="i_rating" translatable="false">rating</string>
    <string name="i_phone" translatable="false">phone</string>
    <string name="i_website" translatable="false">website</string>


    <!-- FACEBOOK SIGN IN -->
    <string name="facebook_app_id">622449801446185</string>
    <string name="fb_login_protocol_scheme">fb622449801446185</string>

    <!-- RESTAURANT TYPES -->
    <string name="typeAll">All</string>
    <string name="typeAmerican">American</string>
    <string name="typeChinese">Chinese</string>
    <string name="typeEnglish">English</string>
    <string name="typeFrench">French</string>
    <string name="typeGerman">German</string>
    <string name="typeIndian">Indian</string>
    <string name="typeItalian">Italian</string>
    <string name="typeJapanese">Japanese</string>
    <string name="typeMexican">Mexican</string>
    <string name="typeSpanish">Spanish</string>
    <string name="typeThai">Thai</string>
    <string name="typeVietnamese">Vietnamese</string>
    <string name="typeOther">Other</string>

    <string-array name="typesOfRestaurants">
        <item>@string/typeAll</item>         <!-- 0   -->
        <item>@string/typeAmerican</item>    <!-- 1   -->
        <item>@string/typeChinese</item>     <!-- 2   -->
        <item>@string/typeEnglish</item>     <!-- 3   -->
        <item>@string/typeFrench</item>      <!-- 4   -->
        <item>@string/typeGerman</item>      <!-- 5   -->
        <item>@string/typeIndian</item>      <!-- 6   -->
        <item>@string/typeItalian</item>     <!-- 6   -->
        <item>@string/typeJapanese</item>    <!-- 8   -->
        <item>@string/typeMexican</item>     <!-- 9   -->
        <item>@string/typeSpanish</item>     <!-- 10  -->
        <item>@string/typeThai</item>        <!-- 11  -->
        <item>@string/typeVietnamese</item>  <!-- 12  -->
        <item>@string/typeOther</item>       <!-- 13  -->
    </string-array>

    <!-- RESTAURANT TYPES ~ NOT TRANSLATABLE ~ FOR FETCHING RESTAURANTS -->
    <string-array name="fetchTypesOfRestaurants">
        <item>@string/typeAll</item>         <!-- 0   -->
        <item>@string/typeAmerican</item>    <!-- 1   -->
        <item>@string/typeChinese</item>     <!-- 2   -->
        <item>@string/typeEnglish</item>     <!-- 3   -->
        <item>@string/typeFrench</item>      <!-- 4   -->
        <item>@string/typeGerman</item>      <!-- 5   -->
        <item>@string/typeIndian</item>      <!-- 6   -->
        <item>@string/typeItalian</item>     <!-- 6   -->
        <item>@string/typeJapanese</item>    <!-- 8   -->
        <item>@string/typeMexican</item>     <!-- 9   -->
        <item>@string/typeSpanish</item>     <!-- 10  -->
        <item>@string/typeThai</item>        <!-- 11  -->
        <item>@string/typeVietnamese</item>  <!-- 12  -->
        <item>@string/typeOther</item>       <!-- 13  -->
    </string-array>

    <!-- NAVIGATION DRAWER -->
    <string name="navDrawerYourLunch">YOUR LUNCH</string>
    <string name="navDrawerJoinGroup">JOIN GROUP</string>
    <string name="navDrawerPersInfo">PERSONAL INFO</string>
    <string name="navDrawerSearchRestaurants">SEARCH RESTAURANTS</string>
    <string name="navDrawerStartSearch">START SEARCH</string>
    <string name="navDrawerSystem">SYSTEM</string>
    <string name="navDrawerSettings">SETTINGS</string>
    <string name="navDrawerLogOut">LOG OUT</string>

    <string name="navDrawerToastNotRestaurantYet">You haven\'t chosen a restaurant yet!</string>

    <!-- CHOOSE LOGIN ACTIVITY -->
    <string name="choose_register">Register</string>
    <string name="choose_signInWithEmail">Sign In with Email</string>

    <!-- AUTH SIGN IN ACTIVITY -->
    <string name="signInEmail">Email</string>
    <string name="signInPassword">Password</string>
    <string name="signInButtonSignIn">Sign In</string>
    <string name="signInTextViewForgotPassword">Forgot your password?</string>
    <string name="signInButtonSignUp">Sign Up</string>

    <!-- AUTH ENTER NAME ACTIVITY -->
    <string name="enterNameStart">Start</string>
    <string name="enterNameThisEmailAlreadyExists">A user with this email already exists</string>

    <!-- JOIN GROUP ACTIVITY -->
    <string name="joinGroupJoinGroup">Join Group</string>
    <string name="joinGroupCreateNewGroup">Create New Group</string>

    <!-- RESTAURANT ACTIVITY -->
    <string name="restaurantBottomCall">CALL</string>
    <string name="restaurantBottomLike">LIKE</string>
    <string name="restaurantBottomWebsite">WEBSITE</string>

    <string name="restaurantNotGoing">Not going to the restaurant&#8230;</string>
    <string name="restaurantGoing">Going to </string>
    <string name="restaurantCallingTo">Calling to</string>
    <string name="restaurantPhoneNotAvailable">Phone not available</string>
    <string name="restaurantWebsiteNotAvailable">Website not available</string>

    <string name="restaurantNoCoworkersJoining">No Coworkers joining at the moment!</string>
    <string name="restaurantUserIsJoining">%1$s is joining!</string>

    <string name="restaurantNameNotAvailable">Restaurant name not available</string>
    <string name="restaurantAddressNotAvailable">Restaurant address not available</string>

    <!-- PERS INFO ACTIVITY -->
    <string name="persSaveChanges">Save Changes</string>
    <string name="persChangePassword">Change password</string>
    <string name="persInfoToastYourInfoUpdated">Your information has been updated</string>
    <string name="persInfoDialogAreYouChangeData">Are you sure you want to modify your profile info?</string>
    <string name="persInfoDialogChangingData">Modifying profile info</string>
    <string name="persInfoDialogChangeDataYes">YES, I am sure</string>
    <string name="persInfoDialogChangeDataNo">No</string>
    <string name="persInfoSomethingWrongImage">Something went wrong uploading the image</string>
    <string name="persInfoNotUpdated">The information has not been updated</string>

    <!-- JOIN GROUP ACTIVITY -->
    <string name="joinGroupDoesNotExist">That group does not exist</string>
    <string name="joinWouldYouLikeJoin">Would you like to join this group</string>
    <string name="joinJoinGroup">Join Group</string>
    <string name="joinYes">Yes</string>
    <string name="joinNo">No</string>
    <string name="joinThisCurrentlyYourGroup">This is currently your group!</string>
    <string name="joinNotChosenGroup">You have not chosen a group yet&#8230;</string>
    <string name="joinNewGroupIs">Your new group is</string>
    <string name="mainCurrentPositionNotAvailable">Current Position not available</string>


</resources>

