<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/progress_bar"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/signin_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/signin_status_bar_id"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorPrimaryDark">
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/signin_fab_id"
                style="@style/fabBackStyle"
                app:rippleColor="@color/colorAccentLight"
                app:fabSize="mini"
                app:borderWidth="0.1dp"/>

            <ProgressBar
                android:id="@+id/signin_progressbar_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_margin="30dp"
                android:visibility="invisible"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/signin_image_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/go_for_lunch_icon"
            android:layout_gravity="center_horizontal">
        </ImageView>

        <android.support.design.widget.TextInputLayout
            style="@style/textInputLayoutStyle"
            android:layout_marginTop="30dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_textinput_email_id"
                style="@style/textInputEditTextStyle"
                android:inputType="text"
                android:hint="@string/signInEmail"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/textInputLayoutStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signin_textinput_password_id"
            style="@style/textInputEditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/signInPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signin_signIn_button_id"
            style="@style/buttonGeneralStyle"
            android:layout_marginTop="20dp"
            android:text="@string/signInButtonSignIn" />

        <TextView
            android:id="@+id/signin_textView_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/signInTextViewForgotPassword"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true" />

        <FrameLayout
            android:id="@+id/choose_separationLine"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bottom_border"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/signin_signUp_button_id"
            style="@style/buttonGeneralStyle"
            android:layout_marginTop="20dp"
            android:text="@string/signInButtonSignUp" />

    </LinearLayout>

</FrameLayout>
